# neon-fastembed

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
docs/: README.md  globals.md
docs/classes/: EmbeddingsModel.md
src/: index.spec.ts  index.ts  lib.rs
